--- a/xc-service-manager-cms/src/main/resources/application.yml
+++ b/xc-service-manager-cms/src/main/resources/application.yml
@@ -9,4 +9,14 @@ spring:
       database: xc_cms
       host: 192.168.116.151
       port: 27017
+  freemarker:
+    cache: false
+    settings:
+      template_update_delay: 0
+  rabbitmq:
+      host: 192.168.116.151
+      username: guest
+      password: guest
+      port: 5672
+      virtual-host: /
 
