--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -21,8 +21,8 @@
         <mybatis.version>3.4.5</mybatis.version>
         <druid.version>1.1.6</druid.version>
         <mysql-connector-java.version>5.1.45</mysql-connector-java.version>
+        <!--<spring-cloud.version>Finchley.SR1</spring-cloud.version>-->
         <spring-cloud.version>Finchley.SR1</spring-cloud.version>
-
         <commons-io.version>2.6</commons-io.version>
         <org.apache.commons.io.version>1.3.2</org.apache.commons.io.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
