--- a/xc-service-manager-cms/src/main/resources/application.yml
+++ b/xc-service-manager-cms/src/main/resources/application.yml
@@ -20,3 +20,14 @@ spring:
       port: 5672
       virtual-host: /
 
+
+eureka:
+ client:
+  register-with-eureka: true #服务注册开关
+  fetch-registry: true #服务发现开关
+  serviceUrl: #Eureka客户端与Eureka服务端进行交互的地址，多个中间用逗号分隔
+    defaultZone: http://127.0.0.1:50101/eureka/,http://127.0.0.1:50102/eureka/,http://127.0.0.1:50103/eureka/
+ instance:
+  prefer‐ip‐address: true #将自己的ip地址注册到Eureka服务中
+  ip‐address: 127.0.0.1
+  instance‐id: ${spring.application.name}:${server.port} #指定实例id
