--- a/xc-govern-center/src/main/resources/application.yml
+++ b/xc-govern-center/src/main/resources/application.yml
@@ -10,8 +10,8 @@ eureka:
     register-with-eureka: true #服务注册，是否将自己注册到Eureka服务中，本身就是所有无需注册
     fetch-registry: true #服务发现，是否从Eureka中获取注册信息
     service-url: #Eureka客户端与Eureka服务端进行交互的地址
-#      defaultZone: http://127.0.0.1:${server.port}/eureka/
-      defaultZone: http://127.0.0.1:50102/eureka/,http://127.0.0.1:50103/eureka/
+      defaultZone: http://127.0.0.1:${server.port}/eureka/
+#      defaultZone: http://127.0.0.1:50102/eureka/,http://127.0.0.1:50103/eureka/
   instance:
     prefer-ip-address: true
   server:
