--- a/xc-service-manage-course/src/main/resources/application.yml
+++ b/xc-service-manage-course/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: xc-service-manage-course
   datasource:
     druid:
-      url: jdbc:mysql://192.168.116.151:3306/xc_course?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+      url: jdbc:mysql://192.168.116.151:3306/xc_course?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       username: root
       password: root
       driverClassName: com.mysql.jdbc.Driver
@@ -17,6 +17,11 @@ spring:
       testOnReturn: false #归还连接时检测连接是否有效
       timeBetweenEvictionRunsMillis: 60000 #配置间隔检测连接是否有效的时间（单位是毫秒）
       minEvictableIdleTimeMillis: 300000 #连接在连接池的最小生存时间（毫秒）
+  data:
+    mongodb:
+      host: 192.168.116.151
+      port: 27017
+      database: xc_cms
 pagehelper:
   helper-dialect: mysql
 
@@ -25,7 +30,8 @@ eureka:
   register-with-eureka: true #服务注册开关
   fetch-registry: true #服务发现开关
   serviceUrl: #Eureka客户端与Eureka服务端进行交互的地址，多个中间用逗号分隔
-    defaultZone: http://127.0.0.1:50101/eureka/,http://127.0.0.1:50102/eureka/,http://127.0.0.1:50103/eureka/
+#    defaultZone: http://127.0.0.1:50101/eureka/,http://127.0.0.1:50102/eureka/,http://127.0.0.1:50103/eureka/
+    defaultZone: http://127.0.0.1:50101/eureka/
  instance:
   prefer‐ip‐address: true #将自己的ip地址注册到Eureka服务中
   ip‐address: 127.0.0.1
@@ -38,3 +44,11 @@ eureka:
 #  OkToRetryOnAllOperations: false #对所有操作请求都进行重试，如果是get则可以，如果是post，put等操作没有实现幂等的情况下是很危险的,所以设置为false
 #  ConnectTimeout: 5000 #请求连接的超时时间
 #  ReadTimeout: 6000 #请求处理的超时时间
+
+course‐publish:
+  siteId: 5a751fab6abb5044e0d19ea1
+  templateId: 5ad9a24d68db5239b8fef199
+  previewUrl: http://127.0.0.1/cms/preview/
+  pageWebPath: /course/detail/
+  pagePhysicalPath: /course/detail/
+  dataUrlPre: http://localhost:31200/course/courseview/
