--- a/xc-service-manage-media/src/main/resources/application.yml
+++ b/xc-service-manage-media/src/main/resources/application.yml
@@ -8,7 +8,14 @@ spring:
       host: 192.168.116.151
       port: 27017
       database: xc_media
+  rabbitmq:
+    host: 192.168.116.151
+    port: 5672
+    virtual-host: /
 xc-service-manage-media:
+  mq:
+    queue-media-video-processor: queue_media_video_processor
+    routingkey-media-video: routingkey_media_video
   upload-location: F:/y2y/video/
 eureka:
   client:
