--- a/xc-service-manage-course/pom.xml
+++ b/xc-service-manage-course/pom.xml
@@ -30,6 +30,10 @@
             <!--<artifactId>feign-okhttp</artifactId>-->
         <!--</dependency>-->
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.xuecheng</groupId>
             <artifactId>xc-service-api</artifactId>
             <version>1.0-SNAPSHOT</version>
